# nesquik

./: CMakeLists.txt  README.md  hashset.h  hashtable.h  list.h  main.c  pointer_hashset.h  pointer_hashtable.h
include/: types.h
include/hash/: hash.h  hashset.h  hashtable.h  pointer_hashset.h  pointer_hashtable.h
include/heap/: heap.h
include/list/: list.h
include/state_machine/: state_machine.h
script/: add_slashes.py
src/hash/: hash.c  hashset.c  hashtable.c  pointer_hashset.c  pointer_hashtable.c
src/heap/: heap.c
src/list/: list.c
src/state_machine/: state_machine.c
templates/: list.h  pointer_hashtable.h
